--- a/SwitchPlay/Views/Home/Index.cshtml
+++ b/SwitchPlay/Views/Home/Index.cshtml
@@ -5,6 +5,13 @@
 <head>
     <!-- Include your other head elements here -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <style>
+        #kategoriFoto {
+            background-image: url("img/kategoria.jpg");
+        }
+    </style>
+
 </head>
 <body>
     <div class="container-fluid" id="main">
@@ -12,82 +19,87 @@
 
             <!--/col-->
 
-            <div class="col main pt-5 mt-3">
-                <h1 class="display-4 d-none d-sm-block">
-                    Mireseerdhet ne SwitchPlay
-                </h1>
+        <div class="col main pt-5 mt-3">
+            <h1 class="display-4 d-none d-sm-block">
+                Mireseerdhet ne SwitchPlay
+            </h1>
 
-                <div class="alert alert-warning fade collapse" role="alert" id="myAlert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                        <span class="sr-only">Close</span>
-                    </button>
+            <div class="alert alert-warning fade collapse" role="alert" id="myAlert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                    <span class="sr-only">Close</span>
+                </button>
 
-                </div>
-                <div class="row mb-3">
-                    <div class="col-xl-3 col-sm-6 py-2">
-                        <div class="card bg-success text-white h-100">
-                            <div class="card-body bg-success">
-
-                                <h6 class="text-uppercase">Kategorite</h6>
-                                <h1 class="display-4" id="categoryCount"></h1>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 py-2">
-                        <div class="card text-white bg-danger h-100">
-                            <div class="card-body bg-danger">
-
-                                <h6 class="text-uppercase">Platformat</h6>
-                                <h1 class="display-4" id="platformCount"></h1>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 py-2">
-                        <div class="card text-white bg-info h-100">
-                            <div class="card-body bg-info">
-
-                                <h6 class="text-uppercase">Studiot</h6>
-                                <h1 class="display-4" id="studioCount"></h1>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 py-2">
-                        <div class="card text-white bg-warning h-100">
-                            <div class="card-body">
-
-                                <h6 class="text-uppercase">Lojat</h6>
-                                <h1 class="display-4" id="gameCount"></h1>
-                            </div>
+            </div>
+            <div style="height: 150%;" class="row mb-3">
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div id="kategoriFoto" class="card text-white h-100">
+                        <div class="card-body">
+                            <h1 class="display-4" id="categoryCount"></h1>
+                            <h3 style="position: absolute; bottom: 0px;" class="text-uppercase">Kategorite</h3>
                         </div>
                     </div>
                 </div>
-                <script>
-                    $(document).ready(function () {
-                        // Fetch and update category count
-                        $.get('/Category/GetCategoryCount', function (data) {
-                            $('#categoryCount').html(data);
-                        });
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card text-white bg-danger h-100">
+                        <div class="card-body bg-danger">
+
+                            <h6 class="text-uppercase">Platformat</h6>
+                            <h1 class="display-4" id="platformCount"></h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card text-white bg-info h-100">
+                        <div class="card-body bg-info">
+
+                            <h6 class="text-uppercase">Studiot</h6>
+                            <h1 class="display-4" id="studioCount"></h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card text-white bg-warning h-100">
+                        <div class="card-body">
+
+                            <h6 class="text-uppercase">Lojat</h6>
+                            <h1 class="display-4" id="gameCount"></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <script>
+                $(document).ready(function () {
+                    // Fetch and update category count
+                    $.get('/Category/GetCategoryCount', function (data) {
+                        $('#categoryCount').html(data);
                     });
-                    $(document).ready(function () {
-                        // Fetch and update category count
-                        $.get('/Studio/GetStudioCount', function (data) {
-                            $('#studioCount').html(data);
-                        });
+                });
+                $(document).ready(function () {
+                    // Fetch and update category count
+                    $.get('/Studio/GetStudioCount', function (data) {
+                        $('#studioCount').html(data);
                     });
-                    $(document).ready(function () {
-                        // Fetch and update category count
-                        $.get('/Platform/GetPlatformCount', function (data) {
-                            $('#platformCount').html(data);
-                        });
+                });
+                $(document).ready(function () {
+                    // Fetch and update category count
+                    $.get('/Platform/GetPlatformCount', function (data) {
+                        $('#platformCount').html(data);
                     });
-                    $(document).ready(function () {
-                        // Fetch and update category count
-                        $.get('/Game/GetGameCount', function (data) {
-                            $('#gameCount').html(data);
-                        });
+                });
+                $(document).ready(function () {
+                    // Fetch and update category count
+                    $.get('/Game/GetGameCount', function (data) {
+                        $('#gameCount').html(data);
+                        console.log(data);
+                        // for (var i = 0; i < data.length; i++){
+                        //     console.log(data[i].title);
+                        //     console.log(data[i].price);
+                        //     console.log(data[i].releaseDate);
+                        // }
                     });
-                </script>
+                });
+            </script>
 </body>
            
 
